<resources>
  <string name="welcome_message">\"Manage your\'s greenhouses with an easy way\"</string>
  <string name="welcome">Welcome</string>
  <string name="lets_start">Let\'s Start</string>
  <string name="app_name">Greenhouse Cultivations</string>
  <string name="greenhouses">Greenhouses</string>
  <string name="hello_world" translatable="false">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="done">Done</string>
  <string name="item_1" translatable="false">First Item</string>
  <string name="item_2" translatable="false">Second Item</string>
  <string name="cd_logo">logo</string>
  <string name="open" translatable="false">open navigation drawer</string>
  <string name="close" translatable="false">close navigation drawer</string>
  <string name="info">Info</string>
  <string name="greenhouse_info">Greenhouse Info</string>
  <string name="calendar">Calendar</string>
  <string name="work">Work</string>
  <string name="job">Job</string>
  <string name="greenhouse">Greenhouse</string>
  <string name="new_greenhouse">New Greenhouse</string>
  <string name="cultivations">Cultivations</string>
  <string name="name">Name</string>
  <string name="area">Area</string>
  <string name="address">Address</string>
  <string name="works">Works</string>
  <string name="active">Active</string>
  <string name="edit">Edit</string>
  <string name="completed">Completed</string>
  <string name="today">Today</string>
  <string name="my_greenhouses">My Greenhouses</string>
  <string name="create_greenhouse">Create greenhouse</string>
  <string name="new_new">New</string>
  <string name="update">Update</string>
  <string name="cancel">Cancel</string>
  <string name="jobs_cult_types">Jobs &amp; Cultivation types</string>
  <string name="jobs">Jobs</string>
  <string name="cultivation_type">Cultivation type</string>
  <string name="job_name">Job name</string>
  <string name="comments">Comments</string>
  <string name="new_job">New job</string>
  <string name="create">Create</string>
  <string name="empty_name">Empty name</string>
  <!-- labels -->
  <string name="label_greenhouse">Greenhouse:</string>
  <string name="label_area">Area:</string>
  <string name="label_cultivations">Cultivations:</string>
  <string name="label_total">Total:</string>
  <string name="label_active">Active:</string>
  <string name="label_pending">Pending:</string>
  <string name="label_address">Address:</string>
  <string name="label_completed">Completed:</string>
  <string name="label_works">Works:</string>
  <!-- hint texts -->
  <string name="hint_job_name">Enter job\'s name</string>
  <string name="hint_comments">Write your comments here</string>
  <string name="hint_greenhouse_name">Enter Greenhouse\'s name</string>
  <string name="hint_greenhouse_area">Enter Greenhouse\'s area</string>
  <string name="hint_greenhouse_address">Enter Greenhouse\'s address</string>
  <string name="hint_cultivation_name">Enter cultivation\'s name</string>
  <string name="delete">Delete</string>
  <string name="new_cultivation">New cultivation</string>
  <string name="set">Set</string>
  <string name="cultivation">Cultivation</string>
  <string name="date">Date</string>
  <string name="duration">Duration</string>
  <string name="hint_duration">Enter duration in days</string>
  <string name="yes">Yes</string>
  <string name="confirm_delete">Are you sure you want to delete it?</string>
  <string name="edit_cultivation">Edit cultivation</string>
  <string name="pending">Pending</string>
  <string name="new_work">New work</string>
  <string name="add">Add</string>
  <string name="edit_work">Edit work</string>
  <string name="greenhouse_empty_name">Greenhouse name cannot be empty!!!</string>
  <string name="select_cultivation_type">Select cultivation type first!!!</string>
  <string name="select_job_type">Select what job you will perform first.</string>
  <string name="on">On</string>
  <string name="permission_denied" translatable="false">Permission denied! Grand the permission first.</string>
  <string name="about">About</string>
  <string name="version">Version</string>
  <string name="version_name" translatable="false">1.0.0</string>
  <string name="email" translatable="false">Email</string>
  <string name="email_summary" translatable="false">lantzos@teiser.gr</string>
  <string name="notifications_settings">Notifications settings</string>
  <string name="notifications">Notifications</string>
  <string name="notifications_summary">Enables or disables notifications</string>
  <string name="data">Data</string>
  <string name="delete_data">Delete data</string>
  <string name="delete_data_summary">Deletes all data of the application</string>
  <string name="day_offset">Days before completed</string>
  <string name="day_offset_summary">Set the days before a cultivation completes to get notify</string>
  <string name="pick_date">Pick date</string>
  <string name="genera_works">Genere works</string>
  <string name="toast_cannot_delete_gh">You cannot delete the only active Greenhouse!</string>
  <string name="toast_greenhouse_deleted_successfully">Greenhouse deleted!</string>
  <string name="not_selected">General Work</string>
  <string name="warning_delete_work">*** Deleting a job type will also deleting all the works with this job type!</string>
  <string name="warning_deleting_cultivation">*** Deleting a cultivation type , will also deletes the cultivations with this cultivation type!</string>
  <string name="completed_work">Completed</string>
  <string name="not_completed">Not completed</string>
    <string name="name_of_user">Your name</string>
    <string name="hint_name_of_user">Enter your name (Optional)</string>
    <string name="lastname">Lastname</string>
    <string name="hint_lastname">Enter your lastname (Optional)</string>
  <string name="about_message" translatable="false">Η εφαρμογή Θερμοκηπιακές - Κηπευτικές καλλιέργειες αποτελεί προιόν ελεύθερου λογισμικου και πνευματικής ιδιοκτησίας του Τμήματος Μηχανικών Πληροφορικής του ΤΕΙ Κεντρικής Μακεδονίας.
Αναπτύχθηκε στα πλαίσια πτυχιακής εργασίας απο τον σπουδαστή Ατζιο Βασίλειο ΑΕΜ (2226) κατόπιν εισήγησης και επιτήρησης του Δρ. Θεόδωρου Λάντζου υπεύθυνου του εργαστηρίου ΕΓΕΚΤ http://egekt.teiser.gr
</string>

</resources>
