<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view3"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spJobNames"
                    android:spinnerMode="dropdown"
                    android:layout_below="@+id/view10"
                    android:layout_alignLeft="@+id/view10"
                    android:layout_alignStart="@+id/view10"
                    android:layout_toLeftOf="@+id/btnAddJob"
                    android:layout_toStartOf="@+id/btnAddJob" />

                <atzios.greenhouse.cultivations.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view10"
                    android:text="@string/job"
                    android:textSize="20sp"
                    android:textColor="@color/primaryText"

                    />
                <atzios.greenhouse.cultivations.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view2"
                    android:text="@string/pick_date"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    android:layout_below="@+id/spJobNames" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:id="@+id/btnDate"
                    android:layout_below="@+id/view2"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:id="@+id/btnAddJob"
                    android:layout_alignTop="@+id/spJobNames"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <atzios.greenhouse.cultivations.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/view5"
                    android:text="@string/comments"
                    android:textColor="@color/primaryText"
                    android:textSize="20sp"
                    android:layout_below="@+id/btnDate"
                    android:layout_alignLeft="@+id/view2"
                    android:layout_alignStart="@+id/view2" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/edComments"
                    android:hint="@string/hint_comments"
                    android:layout_below="@+id/view5"
                    android:layout_alignLeft="@+id/view5"
                    android:layout_alignStart="@+id/view5"
                    android:layout_alignRight="@+id/btnAddJob"
                    android:layout_alignEnd="@+id/btnAddJob" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_work"
                    android:id="@+id/btnCompleted"
                    android:layout_below="@+id/edComments"
                    android:layout_alignLeft="@+id/edComments"
                    android:layout_alignStart="@+id/edComments"
                    android:textColor="#FFFFFF"
                    android:background="@color/primary" />

            </RelativeLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>


</RelativeLayout>