<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Toolbar instead of ActionBar so the drawer can slide on top -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view3"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCultNames"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@+id/btnAdd"
            android:layout_toStartOf="@+id/btnAdd" />

        <atzios.greenhouse.cultivations.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:text="@string/cultivation"
            android:textSize="20sp"
            android:textColor="@color/primaryText"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp" />
        <atzios.greenhouse.cultivations.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        android:text="@string/date"
        android:textColor="@color/primaryText"
        android:textSize="20sp"
        android:layout_below="@+id/spCultNames"
        android:layout_alignLeft="@+id/spCultNames"
        android:layout_alignStart="@+id/spCultNames" />

        <atzios.greenhouse.cultivations.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view5"
            android:text="@string/comments"
            android:textColor="@color/primaryText"
            android:textSize="20sp"
            android:layout_alignLeft="@+id/edComments"
            android:layout_alignStart="@+id/edComments"
            android:layout_below="@+id/btnDate" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/btnDate"
            android:layout_below="@+id/view2"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/btnAdd"
            android:layout_alignBottom="@+id/spCultNames"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edComments"
            android:layout_below="@+id/view5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:hint="@string/hint_comments"
            android:layout_alignRight="@+id/btnAdd"
            android:layout_alignEnd="@+id/btnAdd" />

    </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>



</RelativeLayout>